--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "workbox-webpack-plugin": "^3.4.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
     "preact-router": "^2.5.7"
