Adding firebase deployment configs

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "private": true,
   "name": "headlines-pwa",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
-    "build": "preact build --no-service-worker --template src/template.html",
-    "serve": "preact build --no-service-worker --template src/template.html && preact serve",
+    "build": "preact build --no-service-worker --template src/template.html --no-prerender",
+    "serve": "preact build --no-service-worker --template src/template.html --no-prerender && preact serve",
     "dev": "preact watch --template src/template.html",
     "lint": "eslint src",
     "test": "jest ./tests"
