--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build/*"
   ],
   "devDependencies": {
+    "copy-webpack-plugin": "^4.5.3",
     "eslint": "^4.9.0",
     "eslint-config-synacor": "^2.0.2",
     "identity-obj-proxy": "^3.0.0",
