--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,21 +1,53 @@
 {
-  "name": "headlines-pwa",
-  "short_name": "headlines-pwa",
+  "name": "Headlines",
+  "short_name": "Headlines",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "background_color": "#fff",
-  "theme_color": "#673ab8",
+  "background_color": "#014473",
+  "theme_color": "#014473",
   "icons": [
     {
-      "src": "/assets/icons/android-chrome-192x192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+     "src": "/assets/icons/android-icon-36x36.png",
+     "sizes": "36x36",
+     "type": "image\/png",
+     "density": "0.75"
     },
     {
-      "src": "/assets/icons/android-chrome-512x512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ]
+     "src": "/assets/icons/android-icon-48x48.png",
+     "sizes": "48x48",
+     "type": "image\/png",
+     "density": "1.0"
+    },
+    {
+     "src": "/assets/icons/android-icon-72x72.png",
+     "sizes": "72x72",
+     "type": "image\/png",
+     "density": "1.5"
+    },
+    {
+     "src": "/assets/icons/android-icon-96x96.png",
+     "sizes": "96x96",
+     "type": "image\/png",
+     "density": "2.0"
+    },
+    {
+     "src": "/assets/icons/android-icon-144x144.png",
+     "sizes": "144x144",
+     "type": "image\/png",
+     "density": "3.0"
+    },
+    {
+     "src": "/assets/icons/android-icon-192x192.png",
+     "sizes": "192x192",
+     "type": "image\/png",
+     "density": "4.0"
+    },
+    {
+      "src": "/assets/icons/android-icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image\/png",
+      "density": "4.0"
+     }
+   ]
 }
